# graphics-engine

./: .gitignore  CMakeLists.txt
include/: config.h  indexBuffer.h  shader.h  vertexArray.h  vertexBuffer.h  window.h
include/graphics/: indexBuffer.h  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h
include/graphics/OpenGL/: indexBuffer.h  indexBufferGL.h  rendererGL.h  shaderGL.h  textureGL.h  vertexArray.h  vertexArrayGL.h  vertexBuffer.h  vertexBufferGL.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: indexBuffer.cpp  main.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp  window.cpp
src/graphics/: indexBuffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/graphics/OpenGL/: indexBuffer.cpp  indexBufferGL.cpp  rendererGL.cpp  shaderGL.cpp  textureGL.cpp  vertexArray.cpp  vertexArrayGL.cpp  vertexBuffer.cpp  vertexBufferGL.cpp
